#349 category name wrapping (css) - fixed

--- a/src/views/parts/cards/activity/activity.card.sass
+++ b/src/views/parts/cards/activity/activity.card.sass
@@ -1,1 +1,15 @@
 @import ../../../brand.scss
+
+
+.category-wrapper
+  overflow: hidden
+  text-overflow: ellipsis
+  margin-right: 0px
+  margin-left: 4rem
+
+.lower-wrapper
+  display: table
+  white-space: break-spaces
+  line-height: normal
+  border-top: 1px solid white
+
